feat(PROJETS): ajout de la section des projets sur le site web, réflexion autour de la section 'about-me'.

--- a/app/assets/css/components/badge.css
+++ b/app/assets/css/components/badge.css
@@ -7,3 +7,10 @@
 .text-badge {
   font-size: 15px;
 }
+
+.en-cours {
+  width: fit-content;
+  color: orange;
+  border: 1px solid orange;
+  padding: 5px 8px;
+}
