--- a/app/assets/css/components/card.css
+++ b/app/assets/css/components/card.css
@@ -2,24 +2,71 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  width: 250px;
-  height: 300px;
+  justify-content: space-between;
+  width: 30%;
+  height: 350px;
   border-radius: 8px;
   background: var(--card-background-color);
+  position: relative;
+  overflow: hidden;
 }
 
 .card-image img {
-
+  width: 100%;
   height: 75%;
 }
 
 .card-image {
   display: flex;
+  height: fit-content;
   align-items: center;
   justify-content: center;
 }
 
+.card-controls {
+  position: absolute;
+  width: 80%;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%, 10%);
+  bottom: 50%;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  justify-content: space-evenly;
+  opacity: 0;
+  font-size: 50px;
+  pointer-events: none;
+  transition: opacity 180ms ease, transform 180ms ease;
+  z-index: 1;
+}
+
+.card-controls a {
+  color: var(--primary-color);
+}
+
+.card:hover .card-controls {
+  transform: translate(-50%, 0);
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.card:hover .card-image {
+  opacity: 0.1;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  animation: animationCard 180ms;
+  animation-fill-mode: forwards;
+}
+
 .card-content{
+  width: 80%;
   height: 50%;
+}
+
+@keyframes animationCard {
+  0% {}
+  100% {transform: translateY(-2%);}
 }
