--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -7,11 +7,17 @@
   --font-color-primary: var(--primary-color);
   --font-color-not-important: #c4c4c4;
   --font-color-very-not-important: #939393;
+  --border-color: #2c2c2c;
 
   --card-width-size: 300px;
   --card-height-size: 400px;
   --card-background-color: #262646;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
