--- a/app/assets/css/components/card.css
+++ b/app/assets/css/components/card.css
@@ -12,13 +12,16 @@
 }
 
 .card-image img {
+  position: relative;
+  top: 0;
   width: 100%;
-  height: 75%;
+  max-height: 100%;
+  aspect-ratio: auto;
 }
 
 .card-image {
   display: flex;
-  height: fit-content;
+  height: 60%;
   align-items: center;
   justify-content: center;
 }
@@ -62,6 +65,7 @@
 }
 
 .card-content{
+  margin-top: 10px;
   width: 80%;
   height: 50%;
 }
