--- a/app/assets/css/contact-section.css
+++ b/app/assets/css/contact-section.css
@@ -7,6 +7,7 @@
 
 #contact-section-container h2 {
   font-size: 62px;
+  text-align: center;
 }
 
 .logos-contact {
@@ -22,10 +23,15 @@ a {
 }
 
 .legal-mentions {
-
   width: 100%;
   display: flex;
   justify-content: center;
   position: relative;
   bottom: 10px;
+}
+
+@media screen and (max-width: 400px){
+  #contact-section-container h2 {
+    font-size: 24px;
+  }
 }
