--- a/app/assets/css/project-section.css
+++ b/app/assets/css/project-section.css
@@ -18,3 +18,26 @@
   height: fit-content;
   max-height: 60%;
 }
+
+@media (max-width: 1024px) {
+  .cards-container {
+    width: 90%;
+    gap: 16px;
+  }
+}
+
+@media (max-width: 640px) {
+  .cards-container {
+    width: 95%;
+    gap: 12px;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #project-section-container h2 {
+    font-size: 24px;
+    margin-bottom: 50px;
+  }
+}
