--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -24,10 +24,13 @@ body {
   font-family: 'Inter', 'sans-serif';
   color: var(--primary-color);
   background-color: black;
+  overflow-x: hidden;
 }
 
 section, main {
-  height: 100dvh;
+  width: 100dvw;
+  height: fit-content;
+  min-height: 100dvh;
 }
 
 .synth-wave-color {
