--- a/app/assets/css/primary-section.css
+++ b/app/assets/css/primary-section.css
@@ -61,7 +61,7 @@
   }
 
   #first-section-container h1 {
-    font-size: 3rem;
+    font-size: 14dvw;
   }
 
   #first-section-container .description-content {
